--- a/src/style.scss
+++ b/src/style.scss
@@ -1,231 +1,271 @@
-/* stylelint-disable function-url-quotes */
 
-/**
- * The following styles get applied both on the front of your site
- * and in the editor.
- *
- * Replace them with your own styles or remove the file completely.
- */
-
-@keyframes tonext {
-
-	75% {
-		left: 0;
-	}
-
-	95% {
-		left: 100%;
-	}
-
-	98% {
-		left: 100%;
-	}
-
-	99% {
-		left: 0;
-	}
-}
-
-@keyframes tostart {
-
-	75% {
-		left: 0;
-	}
-
-	95% {
-		left: -300%;
-	}
-
-	98% {
-		left: -300%;
-	}
-
-	99% {
-		left: 0;
-	}
-}
-
-@keyframes snap {
-
-	96% {
-		scroll-snap-align: center;
-	}
-
-	97% {
-		scroll-snap-align: none;
-	}
-
-	99% {
-		scroll-snap-align: none;
-	}
-
-	100% {
-		scroll-snap-align: center;
-	}
-}
 
 .carousel {
+
+	height: calc(100vw * (9 / 16));
+	overflow: hidden;
+	text-align: center;
 	position: relative;
-	padding-top: 1080px;
-	perspective: 100px;
+	padding: 0;
+	list-style: none;
 
-	ol,
-	li {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-	}
+}
 
-	&::before,
-	&::after {
-		content: "";
-		z-index: 1;
-		background-color: #333;
-		background-size: 1.5rem 1.5rem;
-		background-repeat: no-repeat;
-		background-position: center center;
-		color: #fff;
-		font-size: 2.5rem;
-		line-height: 4;
-		text-align: center;
-		pointer-events: none;
-	}
+.carousel-controls,
+.carousel-activator {
+	display: none;
+}
 
-	&::before {
-		background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-	}
+.carousel-control {
+	height: 30px;
+	width: 30px;
+	margin-top: -15px;
+	top: 50%;
+	position: absolute;
+	display: block;
+	cursor: pointer;
+	border-width: 5px 5px 0 0;
+	border-style: solid;
+	border-color: #fafafa;
+	opacity: 0.35;
+	outline: 0;
+	z-index: 3;
 
-	&::after {
-		background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+	&:hover {
+		opacity: 1;
+		transition: opacity 0.5s, transform 0.5s;
 	}
 }
 
-.carousel-viewport {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	display: flex;
-	overflow-x: scroll;
-	overflow-y: hidden;
-	counter-reset: item;
-	scroll-behavior: smooth;
-	scroll-snap-type: x mandatory;
-	box-sizing: border-box;
-	scrollbar-color: transparent transparent; /* thumb and track color */
-	scrollbar-width: none;
-	-ms-overflow-style: none;
+.carousel-control-backward {
+	left: 20px;
+	transform: rotate(-135deg);
+}
 
-	&::-webkit-scrollbar {
-		display: none;
+.carousel-control-forward {
+	right: 35px;
+	transform: rotate(45deg);
+}
+
+.carousel-indicators {
+	position: absolute;
+	bottom: 20px;
+	width: 100%;
+	text-align: center;
+}
+
+.carousel-indicator {
+	height: 15px;
+	width: 15px;
+	border-radius: 100%;
+	display: inline-block;
+	z-index: 2;
+	cursor: pointer;
+	opacity: 0.35;
+	margin: 0 2.5px 0 2.5px;
+	background-color: #fafafa;
+
+	&:hover {
+		opacity: 0.75;
+		transition: opacity 0.5s, transform 0.5s;
 	}
 }
 
 .carousel-slide {
-	position: relative;
-	flex: 0 0 100%;
-	width: 100%;
-	counter-increment: item;
+	height: 100%;
+	position: absolute;
+	opacity: 0;
+	overflow: hidden;
 
-	::before {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate3d(-50%, -40%, 70px);
-		color: #fff;
-		font-size: 2em;
+	a {
+		width: 100%;
+		height: 100%;
+		display: inline-block;
+		font-size: 0;
 	}
 }
 
-.carousel-snapper {
+.carousel-thumb .carousel-indicator {
+	height: 36px;
+	width: 64px;
+	border-radius: 0;
+	border: solid 2px #fff;
+}
+
+.carousel-slide,
+.carousel-thumb .carousel-indicators .carousel-indicator {
+	background-size: cover;
+	background-position: center;
+}
+
+.carousel-scale .carousel-slide {
+	transform: scale(0);
+}
+
+
+.carousel-slide:nth-of-type(1),
+.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(1) {
+	background-image: url(https://unsplash.it/300?random);
+}
+
+.carousel-slide:nth-of-type(2),
+.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(2) {
+	background-image: url(https://unsplash.it/600?random);
+}
+
+.carousel-slide:nth-of-type(3),
+.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(3) {
+	background-image: url(https://unsplash.it/900?random);
+}
+
+.carousel-slide:nth-of-type(4),
+.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(4) {
+	background-image: url(https://unsplash.it/1200?random);
+}
+
+.carousel-slide:nth-of-type(5),
+.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(5) {
+	background-image: url(https://unsplash.it/1500?random);
+}
+
+
+.carousel-track {
 	position: absolute;
 	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	scroll-snap-align: center;
-	text-align: center;
-
-	img {
-		width: 100%;
-		height: auto;
-	}
-}
-
-@media (hover: hover) {
-
-	.carousel-snapper {
-		animation-name: tonext, snap;
-		animation-timing-function: ease;
-		animation-iteration-count: infinite;
-	}
-
-	.carousel-slide:last-child .carousel-snapper {
-		animation-name: tostart, snap;
-	}
-}
-
-@media (prefers-reduced-motion: reduce) {
-
-	.carousel-snapper {
-		animation-name: none;
-	}
-}
-
-.carousel:hover .carousel-snapper,
-.carousel:focus-within .carousel-snapper {
-	animation-name: none;
-}
-
-.carousel-navigation {
-	position: absolute;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	text-align: center;
+	padding: 0;
+	margin: 0;
+	transition: transform 0.5s ease 0s;
+
+	.carousel-slide {
+		display: block;
+		top: 0;
+		left: 0;
+		right: 0;
+		opacity: 1;
+
+		&:nth-of-type(1) {
+			transform: translateX(0%);
+		}
+
+		&:nth-of-type(2) {
+			transform: translateX(100%);
+		}
+
+		&:nth-of-type(3) {
+			transform: translateX(200%);
+		}
+
+		&:nth-of-type(4) {
+			transform: translateX(300%);
+		}
+
+		&:nth-of-type(5) {
+			transform: translateX(400%);
+		}
+	}
 }
 
-.carousel-navigation-list,
-.carousel-navigation-item {
-	display: inline-block;
-}
+.carousel-activator {
 
-.carousel-navigation-button {
-	display: inline-block;
-	width: 1rem;
-	height: 1rem;
-	background-color: #333;
-	background-clip: content-box;
-	border: 0.2rem solid #fff;
-	border-radius: 50%;
-	font-size: 0;
-	transition: transform 0.1s;
-	margin: 0.2rem;
-}
+	&:checked {
 
-.carousel::before,
-.carousel::after,
-.carousel-prev,
-.carousel-next {
-	position: absolute;
-	top: 0;
-	margin-top: 37.5%;
-	width: 4rem;
-	height: 4rem;
-	transform: translateY(-50%);
-	border-radius: 50%;
-	font-size: 0;
-	outline: 0;
-}
+		~ .carousel-slide {
+			transition: opacity 0.5s, transform 0.5s;
+			top: 0;
+			left: 0;
+			right: 0;
+			opacity: 1;
+			transform: scale(1);
+		}
 
-.carousel::before,
-.carousel-prev {
-	left: 2rem;
-}
+	}
 
-.carousel::after,
-.carousel-next {
-	right: 2rem;
-}
+	&:nth-of-type(1):checked {
 
+		~ .carousel-track {
+			transform: translateX(0%);
+		}
+
+
+		~ .carousel-controls:nth-of-type(1) {
+			display: block;
+			opacity: 1;
+		}
+
+		~ .carousel-indicators .carousel-indicator:nth-of-type(1) {
+			opacity: 1;
+		}
+	}
+
+	&:nth-of-type(2):checked {
+
+		~ .carousel-track {
+			transform: translateX(-100%);
+		}
+
+
+		~ .carousel-controls:nth-of-type(2) {
+			display: block;
+			opacity: 1;
+		}
+
+		~ .carousel-indicators .carousel-indicator:nth-of-type(2) {
+			opacity: 1;
+		}
+	}
+
+	&:nth-of-type(3):checked {
+
+		~ .carousel-track {
+			transform: translateX(-200%);
+		}
+
+
+		~ .carousel-controls:nth-of-type(3) {
+			display: block;
+			opacity: 1;
+		}
+
+		~ .carousel-indicators .carousel-indicator:nth-of-type(3) {
+			opacity: 1;
+		}
+	}
+
+	&:nth-of-type(4):checked {
+
+		~ .carousel-track {
+			transform: translateX(-300%);
+		}
+
+
+		~ .carousel-controls:nth-of-type(4) {
+			display: block;
+			opacity: 1;
+		}
+
+		~ .carousel-indicators .carousel-indicator:nth-of-type(4) {
+			opacity: 1;
+		}
+	}
+
+	&:nth-of-type(5):checked {
+
+		~ .carousel-track {
+			transform: translateX(-400%);
+		}
+
+
+		~ .carousel-controls:nth-of-type(5) {
+			display: block;
+			opacity: 1;
+		}
+
+		~ .carousel-indicators .carousel-indicator:nth-of-type(5) {
+			opacity: 1;
+		}
+	}
+
+}
