--- a/src/style.scss
+++ b/src/style.scss
@@ -52,6 +52,10 @@
 	bottom: 20px;
 	width: 100%;
 	text-align: center;
+
+	.carousel-none & {
+		display: none;
+	}
 }
 
 .carousel-indicator {
@@ -103,32 +107,6 @@
 }
 
 
-.carousel-slide:nth-of-type(1),
-.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(1) {
-	background-image: url(https://unsplash.it/300?random);
-}
-
-.carousel-slide:nth-of-type(2),
-.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(2) {
-	background-image: url(https://unsplash.it/600?random);
-}
-
-.carousel-slide:nth-of-type(3),
-.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(3) {
-	background-image: url(https://unsplash.it/900?random);
-}
-
-.carousel-slide:nth-of-type(4),
-.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(4) {
-	background-image: url(https://unsplash.it/1200?random);
-}
-
-.carousel-slide:nth-of-type(5),
-.carousel-thumb .carousel-indicators .carousel-indicator:nth-of-type(5) {
-	background-image: url(https://unsplash.it/1500?random);
-}
-
-
 .carousel-track {
 	position: absolute;
 	top: 0;
@@ -146,25 +124,7 @@
 		right: 0;
 		opacity: 1;
 
-		&:nth-of-type(1) {
-			transform: translateX(0%);
-		}
 
-		&:nth-of-type(2) {
-			transform: translateX(100%);
-		}
-
-		&:nth-of-type(3) {
-			transform: translateX(200%);
-		}
-
-		&:nth-of-type(4) {
-			transform: translateX(300%);
-		}
-
-		&:nth-of-type(5) {
-			transform: translateX(400%);
-		}
 	}
 }
 
@@ -183,89 +143,6 @@
 
 	}
 
-	&:nth-of-type(1):checked {
 
-		~ .carousel-track {
-			transform: translateX(0%);
-		}
-
-
-		~ .carousel-controls:nth-of-type(1) {
-			display: block;
-			opacity: 1;
-		}
-
-		~ .carousel-indicators .carousel-indicator:nth-of-type(1) {
-			opacity: 1;
-		}
-	}
-
-	&:nth-of-type(2):checked {
-
-		~ .carousel-track {
-			transform: translateX(-100%);
-		}
-
-
-		~ .carousel-controls:nth-of-type(2) {
-			display: block;
-			opacity: 1;
-		}
-
-		~ .carousel-indicators .carousel-indicator:nth-of-type(2) {
-			opacity: 1;
-		}
-	}
-
-	&:nth-of-type(3):checked {
-
-		~ .carousel-track {
-			transform: translateX(-200%);
-		}
-
-
-		~ .carousel-controls:nth-of-type(3) {
-			display: block;
-			opacity: 1;
-		}
-
-		~ .carousel-indicators .carousel-indicator:nth-of-type(3) {
-			opacity: 1;
-		}
-	}
-
-	&:nth-of-type(4):checked {
-
-		~ .carousel-track {
-			transform: translateX(-300%);
-		}
-
-
-		~ .carousel-controls:nth-of-type(4) {
-			display: block;
-			opacity: 1;
-		}
-
-		~ .carousel-indicators .carousel-indicator:nth-of-type(4) {
-			opacity: 1;
-		}
-	}
-
-	&:nth-of-type(5):checked {
-
-		~ .carousel-track {
-			transform: translateX(-400%);
-		}
-
-
-		~ .carousel-controls:nth-of-type(5) {
-			display: block;
-			opacity: 1;
-		}
-
-		~ .carousel-indicators .carousel-indicator:nth-of-type(5) {
-			opacity: 1;
-		}
-	}
 
 }
