--- a/src/style.scss
+++ b/src/style.scss
@@ -17,34 +17,38 @@
 }
 
 .carousel-control {
-	height: 30px;
-	width: 30px;
+	color: #fff;
+	font-size: 4rem;
+	line-height: 0.7;
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+	border: #fff 2px solid;
 	margin-top: -15px;
 	top: 50%;
 	position: absolute;
 	display: block;
 	cursor: pointer;
-	border-width: 5px 5px 0 0;
-	border-style: solid;
-	border-color: #fafafa;
 	opacity: 0.35;
 	outline: 0;
 	z-index: 3;
+	background-color: #aaa;
+	transition: 0.5s;
 
 	&:hover {
 		opacity: 1;
-		transition: opacity 0.5s, transform 0.5s;
+		background-color: transparent;
+		border-color: transparent;
+		transition: 0.5s;
 	}
 }
 
 .carousel-control-backward {
 	left: 20px;
-	transform: rotate(-135deg);
 }
 
 .carousel-control-forward {
 	right: 35px;
-	transform: rotate(45deg);
 }
 
 .carousel-indicators {
@@ -68,10 +72,11 @@
 	opacity: 0.35;
 	margin: 0 2.5px 0 2.5px;
 	background-color: #fafafa;
+	transition: 0.5s;
 
 	&:hover {
 		opacity: 0.75;
-		transition: opacity 0.5s, transform 0.5s;
+		transition: 0.5s;
 	}
 }
 
@@ -126,23 +131,4 @@
 
 
 	}
-}
-
-.carousel-activator {
-
-	&:checked {
-
-		~ .carousel-slide {
-			transition: opacity 0.5s, transform 0.5s;
-			top: 0;
-			left: 0;
-			right: 0;
-			opacity: 1;
-			transform: scale(1);
-		}
-
-	}
-
-
-
 }
