--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,7 @@
 
-
 .carousel {
 
-	height: calc(100vw * (9 / 16));
+	aspect-ratio: 16 / 9;
 	overflow: hidden;
 	text-align: center;
 	position: relative;
@@ -96,6 +95,11 @@
 		height: 100%;
 		display: inline-block;
 		font-size: 0;
+	}
+
+	img {
+		width: 100%;
+		height: 100%;
 	}
 }
 
