--- a/src/style.scss
+++ b/src/style.scss
@@ -18,7 +18,8 @@
 .carousel-control {
 	color: #fff;
 	font-size: 4rem;
-	line-height: 0.7;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	line-height: 0.75;
 	height: 60px;
 	width: 60px;
 	border-radius: 50%;
